--- a/css/agency.css
+++ b/css/agency.css
@@ -120,14 +120,17 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #fed136;
+    border-color: blue;
     border-radius: 3px;
     /*text-transform: uppercase;*/
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+/*    background-color: #fed136;
+*/
+    background-color: blue;
+
 }
 
 .btn-xl:hover,
@@ -176,15 +179,16 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #fed136;
+    /*font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;*/
+    color: blue;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #fec503;
+    /*color: #fec503;*/
+    color: blue;
 }
 
 .navbar-default .navbar-collapse {
@@ -222,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #fed136;
+    background-color: blue;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -282,11 +286,12 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 22px;
-    font-style: italic;
+/*    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+*/    font-size: 22px;
+    /*font-style: italic;*/
     line-height: 22px;
-    color: #fed136;
+    /*color: #fed136;*/
+    color: blue;
 }
 
 header .intro-text .intro-heading {
