--- a/css/agency.css
+++ b/css/agency.css
@@ -726,6 +726,7 @@ section#contact .text-danger {
 footer {
     padding: 25px 0;
     text-align: center;
+    background-color: #f7f7f7;
 }
 
 footer span.copyright {
